[package]
name = "netblame"
version = "0.3.0"
edition = "2021"
description = "Is it really the network's fault? Staged network diagnosis CLI that names the culprit with evidence."
license = "MIT"
repository = "https://github.com/pathvector-studio/netblame"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hickory-resolver = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false }
webpki-roots = "1.0"
rustls-pki-types = "1"
x509-parser = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "http2", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4", features = ["supports-colors"] }

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = "0.6"
libc = "0.2"

[profile.release]
strip = true
lto = true
